--- a/app/src/main/assets/chat.html
+++ b/app/src/main/assets/chat.html
@@ -36,6 +36,7 @@
             display: flex;
             flex-direction: column;
             line-height: 1.5;
+
         }
 
         .header {
@@ -289,10 +290,10 @@
 
 <div class="quick-buttons" id="quickButtons">
 <!--    <div class="quick-btn" onclick="quickSend('Các loại bằng lái xe máy')">Các loại bằng</div>-->
-    <div class="quick-btn" onclick="quickSend('Câu hỏi lý thuyết')">Lý thuyết</div>
-    <div class="quick-btn" onclick="quickSend('Biển báo cấm là hình gì?')">Biển báo</div>
-    <div class="quick-btn" onclick="quickSend('Mẹo làm bài thi sát hạch')">Mẹo thi</div>
-    <div class="quick-btn" onclick="quickSend('Tình huống nguy hiểm sa hình')">Sa hình</div>
+<!--    <div class="quick-btn" onclick="quickSend('Câu hỏi lý thuyết')">Lý thuyết</div>-->
+<!--    <div class="quick-btn" onclick="quickSend('Biển báo cấm là hình gì?')">Biển báo</div>-->
+<!--    <div class="quick-btn" onclick="quickSend('Mẹo làm bài thi sát hạch')">Mẹo thi</div>-->
+<!--    <div class="quick-btn" onclick="quickSend('Tình huống nguy hiểm sa hình')">Sa hình</div>-->
 </div>
 
 <div id="input-area">
